--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div class="container">
     <div class="background">
-      OCEAN
+      <p>
+        <div class="logo">❁ OCEANIA</div>
+      </p>
     </div>
     <div class="hero">
       <div class="deskripsi">
